# WWL

./: .gitignore  LICENSE  README.md
data/ENZYMES/: 000.gml  001.gml  002.gml  003.gml  004.gml  005.gml  006.gml  007.gml  008.gml  009.gml  010.gml  011.gml  012.gml  013.gml  014.gml  015.gml  016.gml  017.gml  018.gml  019.gml  020.gml  021.gml  022.gml  023.gml  024.gml  025.gml  026.gml  027.gml  028.gml  029.gml  030.gml  031.gml  032.gml  033.gml  034.gml  035.gml  036.gml  037.gml  038.gml  039.gml  (+561 more)
data/MUTAG/: 000.gml  001.gml  002.gml  003.gml  004.gml  005.gml  006.gml  007.gml  008.gml  009.gml  010.gml  011.gml  012.gml  013.gml  014.gml  015.gml  016.gml  017.gml  018.gml  019.gml  020.gml  021.gml  022.gml  023.gml  024.gml  025.gml  026.gml  027.gml  028.gml  029.gml  030.gml  031.gml  032.gml  033.gml  034.gml  035.gml  036.gml  037.gml  038.gml  039.gml  (+148 more)
experiments/: .gitignore  README.md  main.py  requirements.txt  utilities.py  wwl.py
src/: LICENSE  README.md  pyproject.toml  utilities.py
src/tests/: tests.py
src/wwl/: __init__.py  propagation_scheme.py  utilities.py  wwl.py
supporting_material/: README.md
